--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 img {
     display: block;
-    width: 150px;
-    height:150px;
+    width: 500px;
+    height:500px;
   }
 
 card {
     width: 18rem;
+}
+
+h3 {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
