--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,10 @@ card {
 h3 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
+.col-sm-3{
+    background-color:lavender;
+}
+.col-sm-5{
+    background-color:lavenderblush;
+}
+
